# focus

./: AGENTS.md  LICENSE  README.md  manage.py  pyproject.toml
focus_core/: admin.py  apps.py  context_processors.py  forms.py  models.py  tests.py  urls.py  views.py
focus_core/migrations/: 0001_initial.py  0002_focususer_availability_focususer_bio_and_more.py  0003_groupinvitation_revoked_at.py  0004_projectnote.py  0005_videoproject_archived_at_and_created_by.py  0006_projectresource.py  0007_projectnotification.py  0008_groupnotification.py
focus_core/static/focus_core/: notifications.js  quick_speech.js  styles.css
focus_core/templates/focus_core/: about.html  accessibility.html  account_safety.html  backup_key_sign_in.html  base.html  dashboard.html  dev_linked_account_form.html  dev_sign_in.html  group_detail.html  group_form.html  group_invitations.html  group_members.html  invite_accept.html  mastodon_server_form.html  member_profile.html  notifications.html  passkey_form.html  passkey_register.html  passkey_sign_in.html  privacy.html  profile_form.html  project_confirm_delete.html  project_detail.html  project_form.html  quick_speech.html  status.html
focus_core/templates/focus_core/includes/: checkbox_group.html  field.html  form_errors.html
focus_project/: asgi.py  settings.py  urls.py  wsgi.py
